@startuml "Audio Graph Example"

object SFX_0_Data
object SFX_1_Data

SFX_0_Data : resource = 0x1234
SFX_1_Data : resource = 0x5678

object Player_0

SFX_0_Data --> Player_0



object Player_1

SFX_1_Data --> Player_1


object Mixer_0

Player_0 --> Mixer_0
Player_1 --> Mixer_0

object Reverb

Mixer_0 --> Reverb

object BGM_0_Data

BGM_0_Data : resource = 0x9abc

object Player_2

BGM_0_Data --> Player_2

object Mixer_1

Reverb --> Mixer_1
Player_2 --> Mixer_1

object Main_Output

Mixer_1 --> Main_Output

@enduml

@startuml "Processing Graph Class Diagram"

namespace nb::audio_graph {

class graph {
    +addNode(node: node): void
    +removeNode(node: node): void
    +connectNodes(source: AudioNode, destination: AudioNode): void
    +disconnectNodes(source: AudioNode, destination: AudioNode): void
}

class node {
    +produce_audio(nb::audio_buffer &buf)
}

enum op_type {
    ADD_NODE
    REMOVE_NODE
    CONNECT
    DISCONNECT
}

struct op {
    type: op_type
    src: node_id
    dst: node_id
    node_ptr: std::shared_ptr<node> 
}

graph --> node : contains
node --> node : connects to
op --> graph : modifies
op_type --> op : defines type of operation

}

@enduml